<resources>
    <string name="app_name">Check boxes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_message">Select Fruits</string>
    <string name="apple">Apple</string>
    <string name="orange">Orange</string>
    <string name="grapes">Grapes</string>
    <string name="done">Done</string>



</resources>
